--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GestionFallout">
         <activity
+            android:name=".Sheet"
+            android:exported="true" />
+        <activity
             android:name=".ChooseCharacter"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -32,7 +36,7 @@
             android:exported="true" />
         <activity
             android:name=".Form"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
 
 </manifest>
